[tool.poetry]
name = "swodlr-common"
version = "0.1.1-alpha0"
description = "A support library for SWODLR Python microservices containing common utilities, models, and JSON schemas"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "podaac/swodlr_common"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.38"
fastjsonschema = "^2.18.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
